objects/Data_Masking_Configuration__mdt.object
<CustomObject>
    <description>Metadata to store the fields and their masking type to be used when refreshing full and partial copy sandboxes to scrub sensitive data from the sandboxes.</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>The field which has a PII data that needs to be masked during refreshes.</description>
        <label>FieldName</label>
        <metadataRelationshipControllingField>Data_Masking_Configuration__mdt.ObjectName__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Data_Masking_Configurations</relationshipLabel>
        <relationshipName>Data_Masking_Configurations</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>MaskingRule__c</fullName>
        <description>Choices for the type of masking that needs to be applied for the field.</description>
        <label>MaskingRule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom String</fullName>
                    <default>true</default>
                    <label>Custom String</label>
                </value>
                <value>
                    <fullName>Random Date</fullName>
                </value>
                <value>
                    <fullName>Random Email</fullName>
                </value>
                <value>
                    <fullName>Random Phone</fullName>
                </value>
                <value>
                    <fullName>Random String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaskingText__c</fullName>
        <description>Applicable for masking rule custom string.  Stores the custom value that needs to be replaced.</description>
        <label>MaskingText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The object which has a PII field that needs to be masked during refreshes.</description>
        <label>ObjectName</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Data_Masking_Configurations</relationshipLabel>
        <relationshipName>Data_Masking_Configurations</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Data Masking Configuration</label>
    <pluralLabel>Data Masking Configurations</pluralLabel>
    <validationRules>
        <fullName>Mandate_Masking_Text_for_Custom_String</fullName>
        <active>true</active>
        <description>Rule to mandate entering a value in the custom string field whenever the masking rule is selected as Custom String</description>
        <errorConditionFormula>AND(
  ISPICKVAL(MaskingRule__c, &quot;Custom String&quot;),
   ISBLANK( MaskingText__c ) 
)</errorConditionFormula>
        <errorDisplayField>MaskingText__c</errorDisplayField>
        <errorMessage>A value is required for Masking Type &quot;Custom String&quot;</errorMessage>
    </validationRules>
</CustomObject>